--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
 plotly==6.1.1
+kaleido==0.2.1
 prometheus_client==0.22.0
 prompt_toolkit==3.0.51
 psutil==7.0.0
