--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,19 @@
+name: Quarto Publish
+
 on:
   workflow_dispatch:
   push:
-    branches: main
-
-name: Quarto Publish
+    branches: [main]
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+
     permissions:
       contents: write
+      pages: write
+      id-token: write
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -22,6 +26,7 @@ jobs:
         with:
           python-version: '3.12'
           cache: 'pip'
+
       - run: pip install jupyter
       - run: pip install -r requirements.txt
 
